--- a/.github/workflows/vulgatizer.yml
+++ b/.github/workflows/vulgatizer.yml
@@ -35,11 +35,11 @@ jobs:
           pecha_id = get_open_pecha_id()
           vulga_opf_path = Path(f'./vulga/{pecha_id}.opf')
           try:
-            witness_opf_paths = list(witness_dir.iterdir())
+            witness_paths = list(witness_dir.iterdir())
           except:
             print("witness directory doesn't exist")
             return None
-          witness_opf_paths.sort()
+          witness_paths.sort()
           op_output = OpenPechaFS(vulga_opf_path)
           vulgatizer = VulgatizerPlainText(op_output)
           for witness_path in witness_paths:
